hphp/test/slow/sealed/sealed_classes7.php.expectf
Fatal error: Class someRandomTrait may not inherit from sealed class (SomeTrait) without being in the whitelist in %s/sealed_classes7.php on line 20
